--- a/.github/workflows/run-container.yml
+++ b/.github/workflows/run-container.yml
@@ -27,7 +27,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y make
+        run: sudo apt-get update && sudo apt-get install -y make containernetworking-plugins
 
       - name: Run make install
         run: sudo make install
