--- a/.github/workflows/run-container.yml
+++ b/.github/workflows/run-container.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches:
       - main
+  schedule:
+    - cron: '0 3 * * *' # This sets the workflow to run daily at midnight UTC
 
 jobs:
   install-and-run:
