--- a/.github/workflows/run-container.yml
+++ b/.github/workflows/run-container.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 3 * * *' # This sets the workflow to run daily at midnight UTC
+    - cron: '0 3 * * *' # This sets the workflow to run daily at 3AM
 
 jobs:
   install-and-run:
