github-actions: remove dup beakerlib str
Signed-off-by: Douglas Landgraf <dlandgra@redhat.com>

--- a/.github/workflows/run-beakerlib.yml
+++ b/.github/workflows/run-beakerlib.yml
@@ -1,4 +1,4 @@
-name: Beakerlib - Install and run Engine Stressor via Beakerlib
+name: Beakerlib - Install and run Engine Stressor
 
 on:
   schedule:
