--- a/.github/workflows/run-beakerlib.yml
+++ b/.github/workflows/run-beakerlib.yml
@@ -18,6 +18,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y podman make git sudo
 
+      - name: Install engine-stressor
+        run: |
+          cd engine-stressor
+          sudo make
+          sudo make install
+
       - name: Clone repository and install beakerlib
         run: |
           git clone https://github.com/beakerlib/beakerlib
@@ -25,8 +31,7 @@ jobs:
           sudo make
           sudo make install
 
-      - name: Run BeakerLib script
+      - name: Run beakerlib test script
         run: |
-          pushd engine-stressor/tests/beakerlib/N-instances-podman-parallel
-              sudo ./runtest.sh
-          popd
+          cd engine-stressor/tests/beakerlib/N-instances-podman-parallel
+          ./runtest.sh
