github-actions: update path for beakerlib
looks like engine-stressor it's already as the main dir

Signed-off-by: Douglas Landgraf <dlandgra@redhat.com>

--- a/.github/workflows/run-beakerlib.yml
+++ b/.github/workflows/run-beakerlib.yml
@@ -20,7 +20,6 @@ jobs:
 
       - name: Install engine-stressor
         run: |
-          cd engine-stressor
           sudo make
           sudo make install
 
@@ -33,5 +32,4 @@ jobs:
 
       - name: Run beakerlib test script
         run: |
-          cd engine-stressor/tests/beakerlib/N-instances-podman-parallel
-          ./runtest.sh
+          ./tests/beakerlib/N-instances-podman-parallel/runtest.sh
