--- a/.github/workflows/run-beakerlib.yml
+++ b/.github/workflows/run-beakerlib.yml
@@ -13,23 +13,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y podman make git sudo
+      - name: Set up Docker
+        uses: docker/setup-qemu-action@v2
 
-      - name: Install engine-stressor
-        run: |
-          sudo make
-          sudo make install
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Clone repository and install beakerlib
-        run: |
-          git clone https://github.com/beakerlib/beakerlib
-          cd beakerlib
-          sudo make
-          sudo make install
+      - name: Pull Fedora container
+        run: docker pull fedora:latest
 
-      - name: Run beakerlib test script
+      - name: Run tests in Fedora container
         run: |
-          ./tests/beakerlib/N-instances-podman-parallel/runtest.sh
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace fedora:latest /bin/bash -c "
+          dnf install -y podman make git;
+          make;
+          make install;
+          cd tests/beakerlib/N-instances-podman-parallel;
+          ./runtest.sh"
