rename env var: IMAGE_NAME -> IMAGE_NAME_CONTAINER
There are systems that set env var to IMAGE_NAME
affecting the behaviour of the tool with wrong
image name.

Signed-off-by: Douglas Landgraf <dlandgra@redhat.com>

--- a/.github/workflows/run-container.yml
+++ b/.github/workflows/run-container.yml
@@ -46,7 +46,7 @@ jobs:
             TIMEOUT_PODMAN_STOP_CONTAINER=5 \
             NETWORK_NAME="my-network" \
             VOLUME_NAME="my-volume" \
-            IMAGE_NAME="quay.io/centos-sig-automotive/automotive-osbuild" \
+            IMAGE_NAME_CONTAINER="quay.io/centos-sig-automotive/automotive-osbuild" \
             IMAGE_COMMAND="sleep 3600" \
             NUMBER_OF_CONTAINERS="100" \
             ./engine-stressor
