--- a/.github/workflows/run-container.yml
+++ b/.github/workflows/run-container.yml
@@ -42,7 +42,7 @@ jobs:
           sudo TOTAL_MEMORY_FOR_THE_NAMESPACE="1G" \
             LIST_CURRENT_STATE=true \
             VERBOSE=true \
-            CLEANUP=false \
+            CLEANUP=true \
             TIMEOUT_PODMAN_STOP_CONTAINER=5 \
             NETWORK_NAME="my-network" \
             VOLUME_NAME="my-volume" \
@@ -56,7 +56,7 @@ jobs:
           sudo TOTAL_MEMORY_FOR_THE_NAMESPACE="1G" \
             LIST_CURRENT_STATE=true \
             VERBOSE=true \
-            CLEANUP=false \
+            CLEANUP=true \
             TIMEOUT_PODMAN_STOP_CONTAINER=5 \
             NETWORK_NAME="my-network" \
             NETWORK_DNS_SERVER="8.8.8.8" \
@@ -77,7 +77,7 @@ jobs:
             STRESS_MEMORY="1G" \
             STRESS_VM_STRESSOR_INSTANCES=100 \
             STRESS_TIME="60s" \
-            CLEANUP=false \
+            CLEANUP=true \
             TIMEOUT_PODMAN_STOP_CONTAINER=5 \
             NETWORK_NAME="my-network" \
             NETWORK_DNS_SERVER="8.8.8.8" \
